--- a/open.css
+++ b/open.css
@@ -147,9 +147,10 @@ a {
 .text h1 {
   color: rgb(255, 255, 255);
   text-align: center;
-} */
+} 
+*/
 
-
+/*
 body {
   margin: 0;
   position: relative;
@@ -307,7 +308,6 @@ a {
   text-align: center;
 }
 
-/* Media queries for mobile responsiveness */
 @media (max-width: 600px) {
   #envelope {
     top: calc(50vh - 100px);
@@ -356,5 +356,158 @@ a {
   #envelope button {
     top: calc(75px - 25px);
     left: calc(75px - 25px);
+  }
+}
+*/
+
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-image: linear-gradient(0deg, #e87d7d 0%, #11a4ff 100%);
+  overflow: hidden;
+}
+
+#envelope {
+  position: relative;
+  width: 300px;
+  height: 300px;
+}
+
+#envelope > * {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+#back,
+#front,
+#top {
+  display: block;
+}
+
+#back {
+  z-index: 0;
+}
+
+#front {
+  z-index: 10;
+}
+
+#top {
+  z-index: 11;
+}
+
+#top.animate,
+#front.animate,
+#back.animate,
+#envelope button.animate {
+  opacity: 0;
+  transition: opacity 1s;
+  transition-delay: 1s;
+}
+
+#letter {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #fff;
+  padding: 10px;
+  z-index: 5;
+  width: 90%;
+  height: 50%;
+  top: 20%;
+  left: 5%;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1), 0px 1px 2px 0px rgba(0, 0, 0, 0.06);
+  overflow: hidden;
+  font-size: 16px;
+  transition: all 0.5s ease;
+}
+
+#letter.animate {
+  top: 10%;
+  left: 0;
+  width: 100%;
+  height: 80%;
+  font-size: 18px;
+}
+
+h1 {
+  padding-top: 12px;
+  color: #333;
+}
+
+p {
+  font-size: 16px;
+  line-height: 1.4;
+}
+
+#envelope button {
+  display: block;
+  z-index: 15;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: none;
+  background-color: rgb(255, 89, 0);
+  font-weight: bold;
+  text-align: center;
+  color: white;
+  cursor: pointer;
+  top: calc(50% - 25px);
+  left: calc(50% - 25px);
+  transition: transform 0.5s, background-color 0.5s, color 0.5s;
+}
+
+#envelope button:hover {
+  background-color: white;
+  transform: scale(1.5);
+  color: rgb(255, 89, 0);
+}
+
+/* Mobile Responsiveness */
+@media (max-width: 600px) {
+  #envelope {
+    width: 90vw;
+    height: 90vw;
+  }
+
+  #letter {
+    width: 100%;
+    height: 60%;
+    top: 15%;
+    left: 0;
+    font-size: 14px;
+  }
+
+  #letter.animate {
+    top: 5%;
+    left: 0;
+    width: 100%;
+    height: 80%;
+    font-size: 16px;
+  }
+
+  #envelope button {
+    top: calc(45% - 25px);
+    left: calc(45% - 25px);
+    width: 40px;
+    height: 40px;
+  }
+
+  p {
+    font-size: 14px;
+    line-height: 1.3;
+  }
+
+  h1 {
+    padding-top: 10px;
+    font-size: 18px;
   }
 }
