--- a/open.css
+++ b/open.css
@@ -360,15 +360,15 @@ a {
 }
 */
 
-body {
+/* body {
   margin: 0;
   padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100vw;
   height: 100vh;
   background-image: linear-gradient(0deg, #e87d7d 0%, #11a4ff 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: hidden;
 }
 
@@ -418,12 +418,12 @@ body {
   justify-content: space-around;
   align-items: center;
   background-color: #fff;
-  padding: 10px;
+  padding: 5px;
   z-index: 5;
-  width: 90%;
-  height: 50%;
-  top: 20%;
-  left: 5%;
+  left: 15px;
+  right: 15px;
+  bottom: 5px;
+  top: 105px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1), 0px 1px 2px 0px rgba(0, 0, 0, 0.06);
   overflow: hidden;
   font-size: 16px;
@@ -431,21 +431,48 @@ body {
 }
 
 #letter.animate {
-  top: 10%;
-  left: 0;
-  width: 100%;
-  height: 80%;
-  font-size: 18px;
+  animation: makebig 2s forwards;
+  animation-delay: 1s;
 }
 
-h1 {
-  padding-top: 12px;
-  color: #333;
+@keyframes makebig {
+  0% {
+    top: 105px;
+    left: 15px;
+    right: 15px;
+    bottom: 5px;
+    font-size: 16px;
+  }
+  33% {
+    top: -100px;
+    left: 15px;
+    right: 15px;
+    bottom: 150px;
+    font-size: 16px;
+  }
+  100% {
+    top: 0px;
+    left: -55px;
+    right: -25px;
+    bottom: -100px;
+    font-size: 24px;
+  }
 }
 
-p {
-  font-size: 16px;
-  line-height: 1.4;
+#letter h1 {
+  font-size: inherit;
+}
+
+#letter h2 {
+  font-size: inherit;
+}
+
+#letter img {
+  height: 50%;
+}
+
+a {
+  color: red;
 }
 
 #envelope button {
@@ -460,38 +487,61 @@ p {
   text-align: center;
   color: white;
   cursor: pointer;
-  top: calc(50% - 25px);
-  left: calc(50% - 25px);
-  transition: transform 0.5s, background-color 0.5s, color 0.5s;
+  top: calc(200px - 25px);
+  left: calc(150px - 25px);
+  transition: transform 1s, background-color 1s, color 1s;
 }
 
 #envelope button:hover {
   background-color: white;
   transform: scale(1.5);
   color: rgb(255, 89, 0);
+  transition: transform 1s, background-color 1s, color 1s;
 }
 
-/* Mobile Responsiveness */
+.text h1 {
+  color: white;
+  margin-top: 10px;
+}
+
 @media (max-width: 600px) {
   #envelope {
     width: 90vw;
     height: 90vw;
+    top: 5vh;
+    left: 5vw;
   }
 
   #letter {
-    width: 100%;
-    height: 60%;
-    top: 15%;
-    left: 0;
+    left: 10px;
+    right: 10px;
+    top: 60px;
+    bottom: 10px;
     font-size: 14px;
   }
 
-  #letter.animate {
-    top: 5%;
-    left: 0;
-    width: 100%;
-    height: 80%;
-    font-size: 16px;
+  @keyframes makebig {
+    0% {
+      top: 60px;
+      left: 10px;
+      right: 10px;
+      bottom: 10px;
+      font-size: 14px;
+    }
+    33% {
+      top: -50px;
+      left: 10px;
+      right: 10px;
+      bottom: 70px;
+      font-size: 14px;
+    }
+    100% {
+      top: 0px;
+      left: -30px;
+      right: -20px;
+      bottom: -50px;
+      font-size: 18px;
+    }
   }
 
   #envelope button {
@@ -500,14 +550,200 @@ p {
     width: 40px;
     height: 40px;
   }
+} */
 
-  p {
-    font-size: 14px;
-    line-height: 1.3;
+
+body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  background-image: linear-gradient(0deg, #e87d7d 0%, #11a4ff 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+#envelope {
+  position: relative;
+  width: 300px;
+  height: 300px;
+}
+
+#envelope > * {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+#back,
+#front,
+#top {
+  display: block;
+}
+
+#back {
+  z-index: 0;
+}
+
+#front {
+  z-index: 10;
+}
+
+#top {
+  z-index: 11;
+}
+
+#top.animate,
+#front.animate,
+#back.animate,
+#envelope button.animate {
+  opacity: 0;
+  transition: opacity 1s;
+  transition-delay: 1s;
+}
+
+#letter {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #fff;
+  padding: 5px;
+  z-index: 5;
+  left: 15px;
+  right: 15px;
+  bottom: 5px;
+  top: 105px;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1), 0px 1px 2px 0px rgba(0, 0, 0, 0.06);
+  overflow: hidden;
+  font-size: 16px;
+  transition: all 0.5s ease;
+}
+
+#letter.animate {
+  animation: makebig 2s forwards;
+  animation-delay: 1s;
+}
+
+@keyframes makebig {
+  0% {
+    top: 105px;
+    left: 15px;
+    right: 15px;
+    bottom: 5px;
+    font-size: 16px;
   }
-
-  h1 {
-    padding-top: 10px;
-    font-size: 18px;
+  33% {
+    top: -100px;
+    left: 15px;
+    right: 15px;
+    bottom: 150px;
+    font-size: 16px;
+  }
+  100% {
+    top: 0px;
+    left: -55px;
+    right: -25px;
+    bottom: -100px;
+    font-size: 24px;
   }
 }
+
+#letter h1 {
+  font-size: inherit;
+}
+
+#letter h2 {
+  font-size: inherit;
+}
+
+#letter img {
+  height: 50%;
+}
+
+a {
+  color: red;
+}
+
+#envelope button {
+  display: block;
+  z-index: 15;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: none;
+  background-color: rgb(255, 89, 0);
+  font-weight: bold;
+  text-align: center;
+  color: white;
+  cursor: pointer;
+  top: calc(200px - 25px);
+  left: calc(150px - 25px);
+  transition: transform 1s, background-color 1s, color 1s;
+}
+
+#envelope button:hover {
+  background-color: white;
+  transform: scale(1.5);
+  color: rgb(255, 89, 0);
+  transition: transform 1s, background-color 1s, color 1s;
+}
+
+.text h1 {
+  color: white;
+  text-align: center;
+}
+
+/* Media queries for mobile responsiveness */
+@media (max-width: 600px) {
+  #envelope {
+    width: 90vw;
+    height: 90vw;
+    top: 5vh;
+    left: 5vw;
+    transform: translate(-50%, -50%);
+  }
+
+  #letter {
+    left: 10px;
+    right: 10px;
+    top: 60px;
+    bottom: 10px;
+    font-size: 14px;
+  }
+
+  @keyframes makebig {
+    0% {
+      top: 60px;
+      left: 10px;
+      right: 10px;
+      bottom: 10px;
+      font-size: 14px;
+    }
+    33% {
+      top: -50px;
+      left: 10px;
+      right: 10px;
+      bottom: 70px;
+      font-size: 14px;
+    }
+    100% {
+      top: 0px;
+      left: -30px;
+      right: -20px;
+      bottom: -50px;
+      font-size: 18px;
+    }
+  }
+
+  #envelope button {
+    top: calc(45% - 25px);
+    left: calc(45% - 25px);
+    width: 40px;
+    height: 40px;
+  }
+}
+
